# l-systems

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/lsystems/: __main__.py  context.py  generate.py
src/lsystems/data/: n2.fass  n3.fass  n4.fass  n5.fass
src/lsystems/productions/: context.py  generation.py  precedence.py  productions.py  static.py  stocastic.py  stochastic.py
src/lsystems/protocols/: alphabet.py  production.py  sentence.py
src/lsystems/sentences/: string.py  tuple.py
