[project]
name = "lsystems-core"
version = "0.1.2"
description = "A compositional L-system framework for generative structures and symbolic rewriting in Python."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"

authors = [
  { name = "Jacob Vartuli-Schonberg" }
]

license = { file = "LICENSE" }

keywords = [
  "l-systems",
  "generative-art",
  "symbolic-rewriting",
  "formal-languages",
  "fractals",
  "graphics",
  "turtle"
]

classifiers = [
  "Development Status :: 3 - Alpha",  # change later
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Homepage = "https://github.com/OpenJ92/l-systems"
Repository = "https://github.com/OpenJ92/l-systems"
Issues = "https://github.com/OpenJ92/l-systems/issues"
